<resources>
    <string name="app_name">BuzzTec</string>

    <!--inicio utilizados na tela de LOGIN-->
    <string name="entrar_login">Entrar</string>
    <string name="usuario_login">Usuário</string>
    <string name="senha_login">Senha</string>
    <!--fim utilizados na tela de LOGIN-->


    <!--inicio utilizados na tela de MENU-->
    <string name="consultor_menu">CONSULTOR</string>
    <string name="cliente_menu">CLIENTE</string>
    <string name="atividade_menu">ATIVIDADE</string>
    <string name="consulta_menu">CONSULTA</string>
    <string name="agenda_menu">AGENDA</string>
    <string name="servico_menu">SERVIÇO</string>
    <string name="sobre_menu">SOBRE</string>
    <string name="localizacao_menu">LOCALIZAÇÃO</string>
    <!--MENU-->

    <!--inicio utilizados na tela de MENU-->
    <string name="consultor_detalhes_txt">CONSULTOR/DETALHES</string>
    <string name="bemvindo_txtview">Bem vindo,</string>
    <string name="cliente_detalhes_txt">CLIENTE/DETALHES</string>
    <string name="atividade_detalhes_txt">ATIVIDADE/DETALHES</string>
    <string name="consulta_detalhes_txt">CONSULTA/DETALHES</string>
    <string name="agenda_detalhes_txt">AGENDA/DETALHES</string>
    <string name="servico_detalhes_txt">SERVIÇO/DETALHES</string>
    <string name="telefone_detalhes_txt">Número de Telefone</string>
    <string name="nmservico_detalhes_txt">Nome do serviço</string>
    <string name="descati_detalhes_txt">Descrição da atividade</string>
    <!--MENU-->


    <!--inicio utilizado nas telas de NAVEGAÇÃO-->
    <string name="cadastrar_menus">Cadastrar</string>
    <!--NAVEGAÇÃO-->


    <!--inicio utilizadas em telas de CADASTRO-->
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="cadastro">Cadastrar</string>
    <string name="codigo">Código</string>
    <!--CADASTRO-->


    <!--inicio utilizados na tela de ATIVIDADE-->
    <string name="cliente_atividade">Cliente</string>
    <string name="consultor_atividade">Consultor</string>
    <string name="inicio_atividade">Data inicio</string>
    <string name="termino_atividade">Data termino</string>
    <string name="atividade_atividade">Atividade</string>
    <!--ATIVIDADE-->

    <!--inicio utilizados na tela de SERVIÇO-->
    <string name="tipo_servico">Tipo</string>
    <string name="nome_servico">Nome servico</string>
    <string name="desc_servico">Descrição</string>
    <!--SERVIÇO-->

    <!--inicio utilizados na tela de AGENDA-->
    <string name="data_agenda">Data</string>
    <string name="local_agenda">Local</string>
    <!--AGENDA-->

    <!--inicio utilizados no componente SPINNER_CARGO-->
    <string-array name="spinner_cargo">
        <item>Banco de dados</item>
        <item>Analista mobile</item>
        <item>Analista de sistemas</item>
        <item>Dev. Back-end</item>
        <item>Dev. Front-end</item>
    </string-array>
    <!--SPINNER_CARGO-->

    <!--inicio utilizados no componente TOOLBAR-->
    <string name="title_activity_localizacao">Localização</string>
    <!--TOOLBAR-->

    <!--inicio utilizados no MENU de navegação lateral-->
    <string name="empresa_menu">Buzz Tecnologia</string>
    <!--MENU-->

    <!--inicio utilizados na tela SOBRE-->
    <string name="versao_sobre">Versão 1.0</string>
    <string name="creditos_sobre">Desenvolvido por Buzz Tecnolgoia</string>
    <string name="creditos2_sobre">Powered By Buzz Tecnologia</string>
    <!--SOBRE-->

    <!--inicio utilizados no componente SPINNER_CONSULTA-->
    <string-array name="spinner_consulta">
        <item>Consulta</item>
        <item>Agenda</item>
        <item>Atividade</item>
        <item>Cliente</item>
        <item>Consultor</item>
        <!--<item>Login</item>-->
        <item>Serviço</item>
    </string-array>
    <!--SPINNER_CONSULTA-->

</resources>