<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:backgroundTint="#9C9C9C">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/zero_um"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonConsultor_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gradiente_2"
        android:drawableLeft="@drawable/consultor_icon"
        android:paddingLeft="20dp"
        android:text="@string/consultor_menu"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonCliente_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCliente_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gradiente_2"
        android:drawableLeft="@drawable/cliente_icon"
        android:paddingLeft="20dp"
        android:text="@string/cliente_menu"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonAtividade_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConsultor_menu" />

    <Button
        android:id="@+id/buttonAtividade_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gradiente_2"
        android:drawableLeft="@drawable/atividade_icon"
        android:paddingLeft="20dp"
        android:text="@string/atividade_menu"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonConsulta_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCliente_menu" />

    <Button
        android:id="@+id/buttonConsulta_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gradiente_2"
        android:drawableLeft="@drawable/consultar_icon"
        android:paddingLeft="20dp"
        android:text="@string/consulta_menu"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonAgenda_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAtividade_menu" />

    <Button
        android:id="@+id/buttonAgenda_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gradiente_2"
        android:drawableLeft="@drawable/agenda_icon"
        android:paddingLeft="20dp"
        android:text="@string/agenda_menu"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonServico_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConsulta_menu" />

    <Button
        android:id="@+id/buttonServico_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gradiente_2"
        android:drawableLeft="@drawable/servico_icon"
        android:paddingLeft="20dp"
        android:text="@string/servico_menu"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonSobre_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAgenda_menu" />

    <Button
        android:id="@+id/buttonSobre_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gradiente_2"
        android:drawableLeft="@drawable/sobre_icon"
        android:paddingLeft="20dp"
        android:text="@string/sobre_menu"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonLocalizacao_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonServico_menu" />

    <Button
        android:id="@+id/buttonLocalizacao_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/gradiente_2"
        android:drawableLeft="@drawable/localizacao_icon"
        android:paddingLeft="20dp"
        android:text="@string/localizacao_menu"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSobre_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>